--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -1,14 +1,18 @@
 .feedback {
   @media (min-width: $tablet-width) {
-    background: url("../img/review@1x.jpg") no-repeat, linear-gradient(90deg, #efefef, #ffffff);
+    background: url("../img/review@1x.jpg") no-repeat;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: space-between;
+    margin-bottom: 80px;
   }
 
   @media (min-width: $desktop-width) {
-    padding-left: 225px;
+    padding-left: 175px;
+    min-height: 457px;
+    margin: 70px 0 15px;
+    justify-content: end;
   }
 }
 
@@ -18,25 +22,26 @@
 
   @media (min-width: $tablet-width) {
     order: 0;
-    padding: 82px 0 10px;
+    padding: 72px 47px 10px;
     font-size: 43px;
   }
 
   @media (min-width: $desktop-width) {
     font-size: 53px;
+    padding: 60px 0 10px;
   }
 }
 
 .feedback__comment {
-  margin: 0;
-  margin-bottom: 30px;
+  margin: 0 0 30px;
 
   @media (min-width: $tablet-width) {
     order: 1;
+    padding: 0 52px;
   }
 
   @media (min-width: $desktop-width) {
-    padding-right: 50px;
+    padding: 0 70px 0 0;
   }
 }
 
@@ -48,7 +53,7 @@
   @media (min-width: $tablet-width) {
     font-size: 17px;
     line-height: 1.76;
-    margin: 56px 0 65px;
+    margin: 45px 0;
   }
 }
 
@@ -64,9 +69,16 @@
   @media (min-width: $tablet-width) {
     background-color: #aaaaaa;
     order: 2;
-    width: 20%;
+    width: 23%;
     align-self: flex-end;
-    margin-top: -100px;
+    margin-top: -85px;
+    margin-right: 51px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 20%;
+    margin-top: -84px;
+    margin-right: 0;
   }
 }
 
@@ -113,6 +125,13 @@
 
   @media (min-width: $tablet-width) {
     align-self: flex-end;
-    margin: -50px 0 0;
+    margin: -64px 52px 0;
+    width: 22%;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: -69px 0 0;
+    padding: 10px 35px;
+    width: auto;
   }
 }
