--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -49,7 +49,7 @@
   position: relative;
 
   @media (min-width: $tablet-width) {
-    padding: 3.25em 50px;
+    padding: 50px;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -67,6 +67,7 @@
     display: flex;
     width: 100%;
     justify-content: space-between;
+    padding: 5px 0 0;
     margin-bottom: 50px;
   }
 
@@ -74,7 +75,8 @@
     flex-direction: row-reverse;
     justify-content: flex-end;
     align-content: center;
-    margin-left: -147px;
+    padding: 0;
+    margin-left: -157px;
   }
 }
 
@@ -103,7 +105,7 @@
   @media (min-width: $tablet-width) {
     text-align: center;
     font-size: 17px;
-    width: 110px;
+    width: 125px;
     line-height: 1em;
     text-transform: uppercase;
   }
@@ -165,15 +167,16 @@
     order: 1;
     display: block;
     align-self: flex-end;
-    margin-top: -250px;
+    margin-top: -235px;
     position: absolute;
     right: 55px;
+    width: 43%;
   }
 
   @media (min-width: $desktop-width) {
     width: 45%;
     z-index: -1;
-    margin-top: -425px;
+    margin-top: -415px;
     margin-left: 30px;
   }
 }
@@ -190,11 +193,12 @@
   @media (min-width: $tablet-width) {
     width: auto;
     font-size: 19px;
-    margin: 30px 0;
+    margin: 50px 0 30px;
   }
 
   @media (min-width: $desktop-width) {
-    padding-top: 55px;
+    padding-top: 72px;
+    margin: 30px 0;
   }
 }
 
@@ -205,4 +209,10 @@
     margin: 0;
     width: auto;
   }
+}
+
+.product__figure {
+  margin: 0;
+  padding: 0;
+  width: auto;
 }
