--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -26,21 +26,26 @@
 .card__img {
   @media (min-width: $tablet-width) {
     order: 1;
+    width: 328px;
+    padding-left: 20px;
   }
 
   @media (min-width: $desktop-width) {
     width: 313px;
     height: 462px;
+    padding: 0;
   }
 }
 
 .card__description {
   margin: 24px 28px;
+  position: relative;
 
   @media (min-width: $tablet-width) {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    flex-grow: 1;
   }
 }
 
@@ -49,6 +54,10 @@
   padding: 0;
   font-size: 17px;
   text-align: left;
+
+  @media (min-width: $tablet-width) {
+    font-size: 21px;
+  }
 }
 
 .card__description div {
@@ -69,7 +78,7 @@
   margin-bottom: 15px;
 
   @media (min-width: $tablet-width) {
-    align-self: flex-start;
+    font-size: 15px;
   }
 }
 
