--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -56,9 +56,15 @@
   font-size: 15px;
   margin: 30px 30px 30px 30px;
 
+  @media (min-width: $tablet-width) {
+    margin: 33px;
+    border: 1px solid $bg-30;
+    margin-bottom: 85px;
+  }
+
   @media (min-width: $desktop-width) {
     width: 100%;
-    margin: 50px;
+    margin: 50px auto;
   }
 }
 
