--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -20,7 +20,7 @@
 .header__logo {
   width: 200px;
   height: 80px;
-  margin-left: -22px;
+  margin: auto;
   display: inline-block;
   background-image: url("../img/logo-mobile.svg");
   background-repeat: no-repeat;
