--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -74,7 +74,7 @@
 }
 
 .contacts__table-wrapper {
-  padding: 30px 0;
+  padding: 0 0 30px;
 
   @media (min-width: $tablet-width) {
     display: flex;
