--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -6,11 +6,15 @@
 
 .features__title {
   font-size: 25px;
-  padding-top: 6px;
+  padding-top: 0;
+  margin-top: 0;
+  line-height: 1.1em;
 
   @media (min-width: $tablet-width) {
     font-size: 43px;
+    line-height: 1.5em;
     padding: 35px 45px 0;
+    margin-top: 25px;
   }
 
   @media (min-width: $desktop-width) {
@@ -37,7 +41,7 @@
 }
 
 .features__item {
-  padding: 65px 0 18px;
+  padding: 60px 0 22px;
   line-height: 1.2;
   position: relative;
 
@@ -59,8 +63,8 @@
   position: absolute;
   width: 50px;
   height: 50px;
-  top: 35px;
-  left: 8px;
+  top: 5px;
+  left: 10px;
   background-image: url("../img/icon-feature-flower.svg");
   background-repeat: no-repeat;
 }
@@ -70,8 +74,8 @@
   position: absolute;
   width: 50px;
   height: 50px;
-  top: 35px;
-  left: 1px;
+  top: 5px;
+  left: 3px;
   background-image: url("../img/icon-feature-money.svg");
   background-repeat: no-repeat;
 }
@@ -81,8 +85,8 @@
   position: absolute;
   width: 50px;
   height: 50px;
-  top: 40px;
-  left: 8px;
+  top: 12px;
+  left: 10px;
   background-image: url("../img/icon-feature-heart.svg");
   background-repeat: no-repeat;
 }
@@ -92,8 +96,8 @@
   position: absolute;
   width: 50px;
   height: 50px;
-  top: 40px;
-  left: 10px;
+  top: 11px;
+  left: 7px;
   background-image: url("../img/icon-feature-ball.svg");
   background-repeat: no-repeat;
 }
@@ -103,7 +107,7 @@
   position: absolute;
   width: 53px;
   height: 50px;
-  top: 40px;
+  top: 10px;
   left: 0;
   background-image: url("../img/icon-feature-rocket.svg");
   background-repeat: no-repeat;
@@ -114,8 +118,8 @@
   position: absolute;
   width: 50px;
   height: 50px;
-  top: 36px;
-  left: 10px;
+  top: 12px;
+  left: 5px;
   background-image: url("../img/icon-feature-gift.svg");
   background-repeat: no-repeat;
 }
